数据对比性能优化